# simpl

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json
.cache/clangd/index/: AdSyn.h.7CC958E27D46560E.idx  Analyzer.h.5525208BEE5FFCB2.idx  Analyzer.h.8B99E11D45B060AC.idx  AssociateBandwidth.h.97CCADA2291906BF.idx  AssociateBandwidth.h.F1A4C6F064C39BA3.idx  Breakpoint.h.B77EEC6984C0EE6E.idx  Breakpoint.h.CCDA4F58BC94F918.idx  BreakpointEnvelope.h.7B9850FA70B24E16.idx  BreakpointEnvelope.h.C75270E6208D9BF4.idx  Envelope.h.01C05E699C247E40.idx  Envelope.h.E03C11EF831EE837.idx  FFT.h.0E7773A6FFC33922.idx  Filter.h.5557A6B3DBCCBD80.idx  FourierTransform.h.1C22DD9124D3AA2E.idx  FourierTransform.h.584D2287C58C1055.idx  HammingTable.h.C526EEA4C93C5540.idx  HarmTable.h.1CFFB5A90752DDF1.idx  IFGram.h.0C8587753BCF7CF5.idx  KaiserWindow.h.DCF257CE463FE6C2.idx  KaiserWindow.h.EC608B256DD5098A.idx  LinearEnvelope.h.E6EA77CA792E2F1F.idx  LinearEnvelope.h.F081C0309E4D2F7F.idx  LorisExceptions.h.7EEF46259ABD99BE.idx  LorisExceptions.h.A61F68B062C13B0C.idx  NoiseGenerator.h.EFE06B178380E082.idx  Notifier.h.8044C4F0CAFDB43D.idx  Notifier.h.DD0A1781F8A95A16.idx  Oscillator.h.FFD0868CBF5B824F.idx  PVA.h.66C3209FF20CE143.idx  Partial.h.35BF7E723DCA518B.idx  Partial.h.B19B3B197A18F45E.idx  PartialBuilder.h.2FC4D11F96633541.idx  PartialBuilder.h.CABBE9A11C86D735.idx  PartialList.h.EA8D70E1D7BD1F67.idx  PartialList.h.F4F48277202D354F.idx  PartialPtrs.h.4D1EA05AF95AAA2B.idx  PartialPtrs.h.8352D6B6B8030310.idx  PtrCopyOnWrite.h.28E89E9D41B43963.idx  ReSyn.h.69781943884F0322.idx  ReassignedSpectrum.h.838A4188A69E12C0.idx  (+23 more)
examples/: CMakeLists.txt  compile_commands.json  rtharmonicsynthesis.cpp
examples/.cache/clangd/index/: rtharmonicsynthesis.cpp.0EF455C3B53C7A6B.idx
src/loris/: CMakeLists.txt
src/mq/: CMakeLists.txt  mq.cpp  mq.h  twm.cpp  twm.h
src/simpl/: base.cpp  base.h  partial_tracking.cpp  partial_tracking.h  peak_detection.cpp  peak_detection.h  residual.cpp  residual.h  synthesis.cpp  synthesis.h
src/sms/: CMakeLists.txt
src/sms-old/: analysis.c  peakDetection.c  sms.h
src/sndobj/: CMakeLists.txt
